src/snapshots/vm__parser__test__keyword-3.snap
---
source: src/parser.rs
expression: "keyword(\"true\").parse(\"true)\".into())"
---
Ok(
    (
        LocatedSpan {
            offset: 4,
            line: 1,
            fragment: ")",
            extra: (),
        },
        LocatedSpan {
            offset: 0,
            line: 1,
            fragment: "true",
            extra: (),
        },
    ),
)
