src/snapshots/vm__parser__test__parse_arrays-4.snap
---
source: src/parser.rs
expression: "array_expr(r#\"[1, 2]\"#.into())"
---
Ok(
    (
        LocatedSpan {
            offset: 6,
            line: 1,
            fragment: "",
            extra: (),
        },
        Ast {
            node: ArrayLiteral(
                [
                    Ast {
                        node: Literal(
                            Int(
                                1,
                            ),
                        ),
                        span: LocatedSpan {
                            offset: 1,
                            line: 1,
                            fragment: "1",
                            extra: (),
                        },
                    },
                    Ast {
                        node: Literal(
                            Int(
                                2,
                            ),
                        ),
                        span: LocatedSpan {
                            offset: 4,
                            line: 1,
                            fragment: "2",
                            extra: (),
                        },
                    },
                ],
            ),
            span: LocatedSpan {
                offset: 0,
                line: 1,
                fragment: "[1, 2]",
                extra: (),
            },
        },
    ),
)
