src/snapshots/vm__parser__test__parse_arrays.snap
---
source: src/parser.rs
expression: "array_expr(r#\"[]\"#.into())"
---
Ok(
    (
        LocatedSpan {
            offset: 2,
            line: 1,
            fragment: "",
            extra: (),
        },
        Ast {
            node: ArrayLiteral(
                [],
            ),
            span: LocatedSpan {
                offset: 0,
                line: 1,
                fragment: "[]",
                extra: (),
            },
        },
    ),
)
