src/snapshots/vm__parser__test__parse_assignment-4.snap
---
source: src/parser.rs
expression: "assignment_statement(\"yeet /= 123;\".into())"
---
Ok(
    (
        LocatedSpan {
            offset: 12,
            line: 1,
            fragment: "",
            extra: (),
        },
        Ast {
            node: Assignment {
                ident: Ident(
                    "yeet",
                ),
                value: Ast {
                    node: BinaryOp(
                        Div,
                        Ast {
                            node: Ident(
                                Ident(
                                    "yeet",
                                ),
                            ),
                            span: LocatedSpan {
                                offset: 0,
                                line: 1,
                                fragment: "yeet",
                                extra: (),
                            },
                        },
                        Ast {
                            node: Literal(
                                Int(
                                    123,
                                ),
                            ),
                            span: LocatedSpan {
                                offset: 8,
                                line: 1,
                                fragment: "123",
                                extra: (),
                            },
                        },
                    ),
                    span: LocatedSpan {
                        offset: 0,
                        line: 1,
                        fragment: "yeet /= 123",
                        extra: (),
                    },
                },
            },
            span: LocatedSpan {
                offset: 0,
                line: 1,
                fragment: "yeet /= 123",
                extra: (),
            },
        },
    ),
)
