src/snapshots/vm__parser__test__parse_assignment.snap
---
source: src/parser.rs
expression: "assignment_statement(\"yeet = 123;\".into())"
---
Ok(
    (
        LocatedSpan {
            offset: 11,
            line: 1,
            fragment: "",
            extra: (),
        },
        Ast {
            node: Assignment {
                ident: Ident(
                    "yeet",
                ),
                value: Ast {
                    node: Literal(
                        Int(
                            123,
                        ),
                    ),
                    span: LocatedSpan {
                        offset: 7,
                        line: 1,
                        fragment: "123",
                        extra: (),
                    },
                },
            },
            span: LocatedSpan {
                offset: 0,
                line: 1,
                fragment: "yeet = 123;",
                extra: (),
            },
        },
    ),
)
